syntax="proto3";
option go_package=".;proto";

service user{
  rpc GetUserList(PageInfo)returns(UserListResponse);//用户列表
  rpc GetUserByMobile(MobileRequest)returns(UserInfoResponse);//根据mobile查询用户
  rpc GetUserById(IdRequest)returns(UserInfoResponse);//根据id查询用户
  rpc CreateUser(CreateUserInfo)returns(UserInfoResponse);//创建用户
  rpc UpdateUser(UpdateUserInfo)returns(CheckResponse);//更新用户
  rpc CheckPassword(PasswordCheckInfo)returns(CheckResponse);//检查密码
}

message PageInfo{
  uint32 pn=1;
  uint32 psize=2;
}

message UserInfoResponse{
  int32 id=1;
  string mobile=2;
  string password=3;
  string nickname=4;
  string gender=5;
  uint64 birthday=6;
  int32 role=7;
}

message UpdateUserInfo{
  string nickname=1;
  string gender=2;
  uint64 birthday=3;
}
message UserListResponse{
  int32 total=1;
  repeated UserInfoResponse data=2;
}

message MobileRequest{
  string mobile=1;
}
message IdRequest{
  int32 id=1;
}
message CreateUserInfo{
  string nickname=1;
  string password=2;
}
message CheckResponse{
  bool ok=1;
}
message PasswordCheckInfo{
  string password=1;
  string encryptedPassword=2;
}
